Enable alternative show route
